# ADRO

./: Mishra_Final_Report.docx  Mishra_Presentation.pptx  README.md
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/: settings.gradle
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/: CMakeLists.txt  build.gradle
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/androidTest/java/utdallas/edu/adro/: ExampleInstrumentedTest.java
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/main/: AndroidManifest.xml
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/main/java/utdallas/edu/adro/: LineGraphActivity.java  MainActivity.java  NativeFunction.java  PresetFragment.java  RunADROFragment.java
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/main/jni/: ADRO.cpp  FIRFilter.c  FIRFilter.h  SpeechProcessing.cpp  SpeechProcessing.h  adro_Main.cpp  adro_Main.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/main/jni/FFT/: ForwardFFTImplementationCallback.c  ForwardFFTImplementationCallback.h  Forward_FFT.c  Forward_FFT.h  Forward_FFT_data.c  Forward_FFT_data.h  Forward_FFT_initialize.c  Forward_FFT_initialize.h  Forward_FFT_terminate.c  Forward_FFT_terminate.h  Forward_FFT_types.h
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/main/jni/firGen/: FFTImplementationCallback.c  FFTImplementationCallback.h  firGen.c  firGen.h  firGen_data.c  firGen_data.h  firGen_initialize.c  firGen_initialize.h  firGen_terminate.c  firGen_terminate.h  firGen_types.h
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/main/res/drawable/: icon_selection.xml
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/main/res/layout/: activity_linegraph.xml  activity_main.xml  fragment_preset.xml  runadro.xml
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/main/res/menu/: menu.xml
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/main/res/values-night/: themes.xml
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/app/src/test/java/utdallas/edu/adro/: ExampleUnitTest.java
ADRO_APP_Shell/ADRO_APP_Shell/ADRO/gradle/wrapper/: gradle-wrapper.properties
